GNOME Bugzilla – Bug 619434
playbin: seek in PAUSED state with a custom text-sink
Last modified: 2018-01-25 12:37:49 UTC
Created attachment 161787 [details] seek to 0 & query_position The attached test (1) sets a custom text-sink which is a bin ("subparse ! appsink"), (2) set the pipeline state to PAUSED, (3) seek to 0, and (4) query position. The query fails as expected when the text-sink is not set. But with the custom text-sink, the pipeline suddenly goes to the end position of the subtitle. duncan:~/tmp$ tail test.smi <SYNC START=13000> <P>13000 <SYNC START=14000> <P>14000 <SYNC START=15000> <P>15000 <SYNC START=100000> <P>100000 </BODY> </SAMI> duncan:~/tmp$ ./testpause4 file://`pwd`/test.avi file://`pwd`/test.smi 2>/dev/null position: 0000100000000000 duncan:~/tmp$ If I set the render callbacks of the appsink, it receives all parsed subtitles instantly on PAUSED state.
Do you get any buffers in the custom text sink after the seeking? Is there any useful output related to seeking with GST_DEBUG=5? The suburi is not really rate-limited and your sink has to make sure that it's synced to other streams. You will get the complete subtitle file in large chunks and unparsed all at once.
The appsink received all of the buffers after PAUSED. What should application authors do to make the custom text-sink synced with other streams? Please document it if there are some guidelines on this case. OTOH I understand the technical aspect that suburi...text-sink pipeline is independent with other audio/video streams. But I think out-of-sync for that reason is not reasonable. Nobody wants to see out-of-sync text subtitles in player. Using several media files in the same playbin2 means those streams are parts of the same media stream consisted with separate files.
You have to sync buffers to the clock like every other sink does it. Look at the basesink code or the GstClock documentation to see how you can wait for the clock (gst_clock_new_single_shot_id and gst_clock_id_wait). If you use a non-syncing audio sink in playbin2, a/v synchronization will get lost too btw. It's the job of the sink to prevent this.
Just clock syncing, is it enough? Then this situation should not happen. I have not written my own text-sink. I just used an "appsink" (child of GstBaseSink, with default sync=TRUE) as the custom text-sink.
Yes, that's enough. Problem in your case is, that your sink accepts unparsed/untimestamped subtitles, e.g. raw sami subtitles. appsink needs timestamped buffers to do the automatic clock-syncing. Either accept only text/plain and text/x-pango-markup on your appsink's sinkpad (then everything will be timestamped and all that) or do the subtitle parsing and syncing yourself. An example for the first solution is here: http://cgit.freedesktop.org/gstreamer/gst-plugins-base/tree/tests/icles/playbin-text.c
In my first attached code in this bug, I actually created a bin which parses the subtitles and outputs the result to appsink. /* make my custom text-sink */ GstElement *subbin; GstElement *appsink; subbin = gst_bin_new("subbin"); subparse = gst_element_factory_make("subparse", NULL); appsink = gst_element_factory_make("appsink", NULL); gst_bin_add_many(GST_BIN(subbin), subparse, appsink, NULL); gst_element_link_many(subparse, appsink, NULL); GstPad *ghostpad; GstPad *subparsesink; subparsesink = gst_element_get_static_pad(subparse, "sink"); ghostpad = gst_ghost_pad_new("sink", subparsesink); g_object_unref(G_OBJECT(subparsesink)); gst_element_add_pad(subbin, ghostpad); g_object_set(G_OBJECT (pipeline), "text-sink", subbin, NULL); Simple playing works very well with this way, but after several seek/pause/play the subtitle went out-of-sync with audio/video by a few seconds or even a few minutes. Going PAUSED and seeking to 0 is a clear way to reproduce it. I have not tried the playbin-text.c yet (it seems to require git HEAD version).
The text-sink support has improved a bit in GIT compared to 0.10.29, maybe you can check if this helps a bit with your problem? Syncing inside the text-sink works for me with the playbin-text example.
I tried the git HEAD version but there's no difference. With suburi&text-sink settings and after some seek, text subtitles always went out-of-sync. It's quite easily reproducible. I attached my modified playbin-text.c. It adds (1) suburi setting with argv[2] (2) PAUSE & seek to 0 before playing and (3) some interactive seek feature (',' and '.' keys to RW/FF). Running it makes it go to a wrong position after seeking to 0, and subtitles go out-of-sync after seeking RW/FF.
Created attachment 164578 [details] modified text-sink test with suburi
It doesn't happen with subtitles embedded in an mkv file.
Is this still a problem with 1.0 and latest git master? Can you provide a testcase that reproduces it with 1.0?
Closing this bug report as no further information has been provided. Please feel free to reopen this bug report if you can provide the information that was asked for in a previous comment. Thanks!