servicemp3: disable sync mode for subsink

gstreamer suffers from a bug which causes sync to be lost
in a sink which is handling sparse data
https://bugzilla.gnome.org/show_bug.cgi?id=619434
This problem causes the sink to be synced at the wrong timestamp.
As a result, we could receive subtitle buffers too late.
Disabling sync mode causes the sink to deliver subtitle buffers
too early (sometimes even all at once), which is 'fine' because
we do our own display time keeping.
Hack should be removed again once the gstreamer bug has been fixed.